--- a/src/components/Header/PopoverStyles.css
+++ b/src/components/Header/PopoverStyles.css
@@ -45,11 +45,9 @@
   }
   
   .home__popoverContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border-radius: 15px;
+    width: 300px;
+  padding: 16px;
+  border-radius: 16px;
   }
   
   .home__popover__top {
@@ -165,3 +163,4 @@
   .home__popover__footer > span {
     margin: 10px;
   }
+  
